fix: list evaluators fix: sidebar admin

--- a/evaluator/src/app/components/admin/presentation/list-evaluators/list-evaluators.component.html
+++ b/evaluator/src/app/components/admin/presentation/list-evaluators/list-evaluators.component.html
@@ -1,1 +1,29 @@
-<p>list-evaluators works!</p>
+<div class="body">
+
+
+  <div class="table">
+    <table>
+      <thead>
+        <tr>
+          <th> <i class="fa-solid fa-users fa-lg"></i> </th>
+          <th> NOME </th>
+          <th> NOTA FINAL </th>
+          <th> AÇÕES </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td> <i class="fa-solid fa-user-tie fa-lg"></i> </td>
+          <td> João Silva </td>
+          <td> 19,50 </td>
+          <td class="btn-actions">
+            <button title="Excluir avaliação">
+              <i class="fa-regular fa-trash-can fa-lg"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<app-toast></app-toast>
