--- a/evaluator/src/app/components/admin/admin.component.scss
+++ b/evaluator/src/app/components/admin/admin.component.scss
@@ -108,8 +108,11 @@ select option {
 }
 
 div.content {
+  position: absolute;
   margin-left: 250px;
   padding: 1px 16px;
+  overflow: auto;
+  width: calc(100% - 250px);
 }
 
 @media screen and (max-width: 700px) {
@@ -135,6 +138,7 @@ div.content {
 
   div.content {
     margin-left: 0;
+    width: 100%;
   }
 
   .img {
