--- a/evaluator/src/app/components/admin/team/team.component.html
+++ b/evaluator/src/app/components/admin/team/team.component.html
@@ -32,9 +32,15 @@
           <td> {{ team.name }} </td>
           <td> {{ team.username }} </td>
           <td>
-            <button type="button" class="btn btn-generate-password" [popover]="popTemplate" [outsideClick]="true" (onShown)="generatePassword(team)" placement="bottom"> Gerar senha </button>
-            <ng-template #popTemplate>{{ newPassword }}</ng-template>
-           </td>
+            <button type="button" class="btn btn-generate-password" [popover]="popTemplate" [outsideClick]="true" (onShown)="generatePassword(team)" placement="bottom">Gerar senha</button>
+            <ng-template #popTemplate>
+              {{ newPassword }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <button type="button" class="btn btn-copy-text" (click)="copyToClipboard(newPassword)">
+                <i class="fa-solid fa-copy fa-sm"></i>
+              </button>
+            </ng-template>
+          </td>
+          
           <td class="btn-actions">
             <button>
               <i class="fa-solid fa-pencil" (click)="edit(team);"></i>
