feat: footer credits fix: color text h1 and table

--- a/evaluator/src/app/components/admin/presentation/list-evaluators/list-evaluators.component.scss
+++ b/evaluator/src/app/components/admin/presentation/list-evaluators/list-evaluators.component.scss
@@ -1,6 +1,7 @@
 .body{
     padding: 20px;
     font-family: var(--font);
+    color: var(--dark-blue);
 }
 table {
     width: 100%;
@@ -17,6 +18,7 @@ tbody td {
     padding: 10px;
     text-align: center;
     border-bottom: 1px solid var(--grey);
+    color: var(--dark-blue);
 }
 
 tbody tr:last-child td {
