--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.scss
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.scss
@@ -2,6 +2,7 @@
 .body{
   padding: 30px;
   font-family: var(--font);
+  color: var(--dark-blue);
 }
 h1 {
   text-align: center;
@@ -98,6 +99,7 @@ tbody td {
   padding: 10px;
   text-align: center;
   border-bottom: 1px solid var(--grey);
+  color: var(--dark-blue);
 }
 
 tbody tr:last-child td {
