--- a/evaluator/src/app/components/admin/presentation/presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.html
@@ -1,4 +1,5 @@
 <div class="body">
+  <div class="main">
   <div class="header">
     <h1> APRESENTAÇÕES </h1>
     <div class="line"></div>
@@ -66,5 +67,8 @@
     </table>
   </div>
   <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div>
-
+</div>
+<div class="footer">
+  <app-footer-credits></app-footer-credits>
+</div>
 </div>
