--- a/evaluator/src/app/components/admin/presentation/presentation.component.scss
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.scss
@@ -1,8 +1,15 @@
 @import url(src/styles.scss);
 
 .body {
-  padding: 30px;
   font-family: var(--font);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.main{
+  padding: 30px;
+  flex: 1;
+  color: var(--dark-blue);
 }
 
 h1 {
@@ -13,6 +20,7 @@ h1 {
 
 .bold {
   font-weight: 700;
+  color: var(--dark-blue);
 }
 
 .line {
@@ -111,6 +119,7 @@ tbody td {
   padding: 10px;
   text-align: center;
   border-bottom: 1px solid var(--grey);
+  color: var(--dark-blue);
 }
 
 tbody tr:last-child td {
@@ -225,7 +234,9 @@ button {
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-
+.footer{
+  margin-top: auto;
+}
 
 @media screen and (max-width: 768px) {
   .input-icons {
