fix: resolved conflicts

--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.html
@@ -38,7 +38,7 @@
                 <i class="fa-solid fa-copy fa-sm"></i>
               </button>
             </ng-template>
-            <button type="button" class="btn btn-generate-password" [popover]="popTemplate" [outsideClick]="true" (onShown)="generatePassword(evaluator)" placement="bottom">Gerar senha</button>
+            <button type="button" class="btn btn-generate-password" [popover]="popTemplate" [outsideClick]="true" (onShown)="generatePassword(item)" placement="bottom">Gerar senha</button>
           </td>
           <td class="btn-actions">
             <button>
