--- a/evaluator/src/app/components/ranking/ranking.component.html
+++ b/evaluator/src/app/components/ranking/ranking.component.html
@@ -23,45 +23,45 @@
   
 </div> -->
         <div class="ranking-container">
-            <div class="podium" (click)="revelar()">
+            <div class="podium" (click)="reveal()">
                 <!-- Primeiro lugar (Dourado) -->
-                <div class="card gold" *ngIf="groups.length > 0">
+                <div class="card gold">
                     <div class="bg">
                         <h1>1º Lugar</h1>
                         <i class="fas fa-medal fa-2xl"></i>
-                        <h2 *ngIf="revelado1">{{ groups[0].projectName.toUpperCase() }}</h2>
-                        <p *ngIf="revelado1"><span class="bold">STACK: </span>{{ groups[0].stack }}</p>
+                        <h2 *ngIf="revealed1">{{ data[0].projectName.toUpperCase() }}</h2>
+                        <p *ngIf="revealed1"><span class="bold">STACK: </span>{{ data[0].stack }}</p>
                     </div>
                     <div class="blob"></div>
                 </div>
 
                 <!-- Segundo lugar (Prata) -->
-                <div class="card silver" *ngIf="groups.length > 1">
+                <div class="card silver">
                     <div class="bg">
                         <h1>2º Lugar</h1>
                         <i class="fas fa-medal fa-2xl"></i>
-                        <h2 *ngIf="revelado2">{{ groups[1].projectName }}</h2>
-                        <p *ngIf="revelado2"><span class="bold">STACK: </span>{{ groups[1].stack }}</p>
+                        <h2 *ngIf="revealed2">{{ data[1].projectName }}</h2>
+                        <p *ngIf="revealed2"><span class="bold">STACK: </span>{{ data[1].stack }}</p>
                     </div>
                     <div class="blob"></div>
                 </div>
 
                 <!-- Terceiro lugar (Bronze) -->
-                <div class="card bronze" *ngIf="groups.length > 2">
+                <div class="card bronze" >
                     <div class="bg">
                         <h1>3º Lugar</h1>
                         <i class="fas fa-medal fa-2xl"></i>
-                        <h2 *ngIf="revelado3">{{ groups[2].projectName }}</h2>
-                        <p *ngIf="revelado3"><span class="bold">STACK: </span>{{ groups[2].stack }}</p>
+                        <h2 *ngIf="revealed3">{{ data[2].projectName }}</h2>
+                        <p *ngIf="revealed3"><span class="bold">STACK: </span>{{ data[2].stack }}</p>
                     </div>
                     <div class="blob"></div>
                 </div>
             </div>
 
             <!-- TODOS GRUPOS -->
-            <div class="other-groups" *ngIf="revelado1">
+            <div class="other-groups" *ngIf="revealed1">
                 <h1>RANKING COMPLETO</h1>
-                <div class="group" *ngFor="let group of groups; let i = index"
+                <div class="group" *ngFor="let group of data; let i = index"
                     [ngClass]="{'gold-list': i === 0, 'silver-list': i === 1, 'bronze-list': i === 2}">
                     <div class="icon-left">
                         <div class="icon" *ngIf="i < 3">
