--- a/evaluator/src/app/components/ranking/ranking.component.html
+++ b/evaluator/src/app/components/ranking/ranking.component.html
@@ -1,4 +1,7 @@
 <div class="body">
+  <div class="main">
+
+  
   <div class="header">
     <div class="img">
       <img src="assets/img/logo-devs2blu.png" alt="logo devs2blu">
@@ -23,7 +26,7 @@
   <div class="ranking-container">
     <div class="podium" (click)="reveal();">
       <!-- Primeiro lugar (Dourado) -->
-      <div class="card gold" *ngIf="data.length > 0">
+      <div class="card gold">
         <div class="bg">
           <h1>1º Lugar</h1>
           <i class="fas fa-medal fa-2xl"></i>
@@ -33,7 +36,7 @@
         <div class="blob"></div>
       </div>
       <!-- Segundo lugar (Prata) -->
-      <div class="card silver" *ngIf="data.length > 1">
+      <div class="card silver">
         <div class="bg">
           <h1>2º Lugar</h1>
           <i class="fas fa-medal fa-2xl"></i>
@@ -43,7 +46,7 @@
         <div class="blob"></div>
       </div>
       <!-- Terceiro lugar (Bronze) -->
-      <div class="card bronze" *ngIf="data.length > 2">
+      <div class="card bronze">
         <div class="bg">
           <h1>3º Lugar</h1>
           <i class="fas fa-medal fa-2xl"></i>
@@ -80,4 +83,8 @@
       </div>
     </div>
   </div>
+</div>
+<div class="footer">
+  <app-footer-credits></app-footer-credits>
+</div>
 </div>
