fix(update): simplify functionality fix: typos, formatting fix(shared): rename "no-entries" to "fetch-empty"

--- a/evaluator/src/app/components/admin/challenge/dialog-challenge/dialog-challenge.component.html
+++ b/evaluator/src/app/components/admin/challenge/dialog-challenge/dialog-challenge.component.html
@@ -3,7 +3,7 @@
   <div class="line"></div>
   <form [formGroup]="form" (ngSubmit)="onSubmit(form.value);">
     <div class="input-container">
-      <label for="title"> NOME </label>
+      <label for="title"> DESAFIO </label>
       <div class="input-group">
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
@@ -13,8 +13,7 @@
     </div>
     <div class="form-actions">
       <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
-      <button type="submit" class="submit"> Enviar </button>
+      <button type="submit" class="submit"> ENVIAR </button>
     </div>
   </form>
 </div>
-<app-toast></app-toast>
