--- a/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
+++ b/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
@@ -5,9 +5,7 @@
     <div class="input-container">
       <label for="representative"> NOME DA EQUIPE </label>
       <div class="input-group">
-        <div class="icon">
-          <i class="fas fa-user fa-lg"></i>
-        </div>
+        <div class="icon"><i class="fas fa-user fa-lg"></i></div>
         <input type="text" class="input-form" id="representative" placeholder="Ex. Grupo1_C#" formControlName="name">
       </div>
     </div>
@@ -21,9 +19,8 @@
       </div>
       <div class="form-actions">
         <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
-        <button type="submit" class="submit"> Enviar </button>
+        <button type="submit" class="submit"> ENVIAR </button>
       </div>
     </div>
   </form>
 </div>
-<app-toast></app-toast>
