--- a/evaluator/src/app/shared/components/toast/toast.component.html
+++ b/evaluator/src/app/shared/components/toast/toast.component.html
@@ -2,8 +2,8 @@
   <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <img class="rounded me-2" src="assets/img/logo-devs2blu-min.png">
-      <strong class="me-auto"> Service </strong>
-      <small *ngIf="elapsedTime"> em {{ elapsedTime }}ms </small>
+      <strong class="me-auto"> Notificação do Sistema </strong>
+      <small *ngIf="elapsedTime"> em {{ elapsedTime }} ms </small>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body">
