--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -5,20 +5,20 @@
     <div class="select-add">
       <select name="events" id="events">
         <option value="" disabled selected hidden>Selecione um evento</option>
-        <option class="add-event" value="add-event" [routerLink]="['/admin/adicionar_evento']">Adicionar evento +<i class="fa-solid fa-plus"></i></option>
-        <option value="">2023.1</option>
-        <option value="">2022.2</option>
-      </select> 
+        <option class="add-event" value="add-event" [routerLink]="['/admin/adicionar_evento']"> Adicionar evento <i class="fa-solid fa-plus"></i></option>
+        <option value=""> 2023.1 </option>
+        <option value=""> 2022.2 </option>
+      </select>
     </div>
   <h1 class="cadastro"> ACESSOS </h1>
-  <button class="button-menu" [routerLink]="['/admin/equipes']">Equipes</button>
-  <button class="button-menu" [routerLink]="['/admin/avaliadores']">Avaliadores</button>
+  <button class="button-menu" [routerLink]="['/admin/equipes']"> Equipes </button>
+  <button class="button-menu" [routerLink]="['/admin/avaliadores']"> Avaliadores </button>
   <h1 class="cadastro"> CADASTROS </h1>
-  <button class="button-menu" [routerLink]="['/admin/criterios']">Critérios</button>
-  <button class="button-menu" [routerLink]="['/admin/projetos']">Desafios</button>
+  <button class="button-menu" [routerLink]="['/admin/criterios']"> Critérios </button>
+  <button class="button-menu" [routerLink]="['/admin/projetos']"> Desafios </button>
   <h1 class="gerenciamento"> GERENCIAMENTO </h1>
-  <button class="button-menu" [routerLink]="['/admin/apresentacoes']">Apresentações</button>
-  <button class="btn-exit"> Sair </button>
+  <button class="button-menu" [routerLink]="['/admin/apresentacoes']"> Apresentações </button>
+  <button class="btn-exit"> SAIR </button>
 </div>
 <div class="rotas content">
   <router-outlet></router-outlet>
