--- a/evaluator/src/app/components/admin/challenge/challenge.component.html
+++ b/evaluator/src/app/components/admin/challenge/challenge.component.html
@@ -7,9 +7,7 @@
     <label for="filter"> FILTRAR </label>
     <div class="input-icons">
       <div class="search-input">
-        <div class="icon">
-          <i class="fas fa-search fa-lg"></i>
-        </div>
+        <div class="icon"><i class="fas fa-search fa-lg"></i></div>
         <input type="text" class="input-filter" id="filter" [(ngModel)]="filter">
       </div>
       <button class="btn-cadastrar" (click)="openDialog();"> CADASTRAR </button>
@@ -19,28 +17,25 @@
     <table>
       <thead>
         <tr>
-          <th> <i class="fa-solid fa-list fa-lg"></i> </th>
-          <th> NOME DO DESAFIO </th>
+          <th><i class="fa-solid fa-list fa-lg"></i></th>
+          <th> DESAFIO </th>
+          <th> CRITÉRIOS </th>
           <th> AÇÕES </th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let item of data | filter: filterCols: filter">
           <td> {{ item.id }} </td>
-          <td> {{ item.propositionCriteria.length }} </td>
           <td> {{ item.name }} </td>
+          <td> {{ item.propositionCriteria.length }} </td>
           <td class="btn-actions">
-            <button>
-              <i class="fa-solid fa-pencil" (click)="edit(item);"></i>
-            </button>
-            <button>
-              <i class="fa-regular fa-trash-can" (click)="remove(item.id);"></i>
-            </button>
+            <button><i class="fa-solid fa-pencil" (click)="edit(item);"></i></button>
+            <button><i class="fa-regular fa-trash-can" (click)="remove(item);"></i></button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-  <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div>
+  <div *ngIf="data.length === 0"><app-fetch-empty></app-fetch-empty></div>
 </div>
 <app-toast></app-toast>
