--- a/evaluator/src/app/components/admin/criterion/criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.html
@@ -7,9 +7,7 @@
     <label for="filter"> FILTRAR </label>
     <div class="input-icons">
       <div class="search-input">
-        <div class="icon">
-          <i class="fas fa-search fa-lg" ></i>
-        </div>
+        <div class="icon"><i class="fas fa-search fa-lg" ></i></div>
         <input type="text" class="input-filter" id="filter" [(ngModel)]="filter">
       </div>
       <button class="btn-cadastrar" (click)="openDialog();"> CADASTRAR </button>
@@ -31,18 +29,13 @@
           <td> {{ item.name }} </td>
           <td> {{ item.description }} </td>
           <td class="btn-actions">
-            <button>
-              <i class="fa-solid fa-pencil" (click)="edit(item);"></i>
-            </button>
-            <button>
-              <i class="fa-regular fa-trash-can" (click)="remove(item);"></i>
-            </button>
+            <button><i class="fa-solid fa-pencil" (click)="edit(item);"></i></button>
+            <button><i class="fa-regular fa-trash-can" (click)="remove(item);"></i></button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-  <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div>
-
+  <div *ngIf="data.length === 0"><app-fetch-empty></app-fetch-empty></div>
 </div>
 <app-toast></app-toast>
