--- a/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
@@ -5,34 +5,27 @@
     <div class="input-container">
       <label for="type"> TIPO </label>
       <div class="input-group">
-        <div class="icon">
-          <i class="fa-regular fa-pen-to-square fa-lg"></i>
-        </div>
-        <input type="text" class="input-form" id="type" placeholder="Ex.: Funcionalidade" formControlName="name">
+        <div class="icon"><i class="fa-regular fa-pen-to-square fa-lg"></i></div>
+        <input type="text" class="input-form" id="type" placeholder="Ex. Funcionalidade" formControlName="name">
       </div>
     </div>
     <div class="input-container">
       <label for="weight"> PESO </label>
       <div class="input-group">
-        <div class="icon">
-          <i class="fas fa-weight-hanging fa-lg"></i>
-        </div>
-        <input type="number" class="input-form" id="weight" placeholder="Ex.: 7" formControlName="weight">
+        <div class="icon"><i class="fas fa-weight-hanging fa-lg"></i></div>
+        <input type="number" class="input-form" id="weight" placeholder="Ex. 5" formControlName="weight">
       </div>
     </div>
     <div class="input-container">
       <label for="description"> DESCRIÇÃO </label>
       <div class="input-group">
-        <div class="icon icon-textarea">
-          <i class="fa-regular fa-pen-to-square fa-lg"></i>
-        </div>
+        <div class="icon icon-textarea"><i class="fa-regular fa-pen-to-square fa-lg"></i></div>
         <textarea class="input-form" name="description" id="description" cols="30" rows="5" formControlName="description"></textarea>
       </div>
     </div>
     <div class="form-actions">
       <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
-      <button type="submit" class="submit"> Enviar </button>
+      <button type="submit" class="submit"> ENVIAR </button>
     </div>
   </form>
 </div>
-<app-toast></app-toast>
