--- a/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
@@ -1,30 +1,24 @@
 <div class="dialog-form">
   <h2> Formulário de Avaliador </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value);">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
     <div class="input-container">
       <label for="name"> NOME </label>
       <div class="input-group">
-        <div class="icon">
-          <i class="fas fa-user fa-lg"></i>
-        </div>
-        <input type="text" class="input-form" id="name" placeholder="Ex. João da Silva" formControlName="name">
+        <div class="icon"><i class="fas fa-user fa-lg"></i></div>
+        <input type="text" class="input-form" id="name" placeholder="Ex. João do Pulo" formControlName="name">
       </div>
     </div>
     <div class="input-container">
       <label for="user"> USUÁRIO </label>
       <div class="input-group">
-        <div class="icon">
-          <i class="fas fa-user fa-lg"></i>
-        </div>
-          <input type="text" class="input-form" id="user" placeholder="Ex. joao.silva" formControlName="username">
-
+        <div class="icon"><i class="fas fa-user fa-lg"></i></div>
+        <input type="text" class="input-form" id="user" placeholder="Ex. joao.pulo" formControlName="username">
       </div>
-        <div class="form-actions">
-          <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
-          <button type="submit" class="submit"> Enviar </button>
-        </div>
+      <div class="form-actions">
+        <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
+        <button type="submit" class="submit"> ENVIAR </button>
       </div>
+    </div>
   </form>
 </div>
-<app-toast></app-toast>
