--- a/evaluator/src/app/components/evaluators/dialog-assessment/dialog-assessment.component.html
+++ b/evaluator/src/app/components/evaluators/dialog-assessment/dialog-assessment.component.html
@@ -1,34 +1,29 @@
 <div class="dialog-form">
-    <h2> NOME DO PROJETO DA EQUIPE </h2>
-    <h3><span class="bold">Stack: </span>C#</h3>
-    <div class="line"></div>
-    <form class="formGroup">
-        <table>
-            <thead>
-              <tr>
-                <th class="bold criterion"> CRITÉRIOS </th>
-                <th class="bold weight"> PESO </th>
-                <th class="bold note"> NOTA <span class="max-score">máx.: 5</span></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let criterion of listCriteria">
-                <td> {{criterion.nome}} </td>
-                <td class="td-weight"> {{criterion.peso}} </td>
-                <td>
-                    <input type="number" class="input-form" placeholder="Ex.: 0 - 5" min="0" max="5" 
-                    [(ngModel)]="criterion.nota"
-                    name="nota"
-                    [ngClass]="{'invalid-note': checkInvalidNote(criterion)}">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-      
-      <div class="form-actions">
-        <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
-        <button type="submit" class="submit"> Enviar </button>
-      </div>
-    </form>
-  </div>
-  
+  <h2> NOME DO PROJETO DA EQUIPE </h2>
+  <h3><span class="bold"> Stack: </span> C# </h3>
+  <div class="line"></div>
+  <form class="formGroup">
+    <table>
+      <thead>
+        <tr>
+          <th class="bold criterion"> CRITÉRIOS </th>
+          <th class="bold weight"> PESO </th>
+          <th class="bold note"> NOTA <span class="max-score"> máx. 5 </span></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let criterion of listCriteria">
+          <td> {{criterion.nome}} </td>
+          <td class="td-weight"> {{criterion.peso}} </td>
+          <td>
+            <input type="number" class="input-form" placeholder="Ex.: 0 - 5" min="0" max="5" [(ngModel)]="criterion.nota" name="nota" [ngClass]="{'invalid-note': checkInvalidNote(criterion)}">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="form-actions">
+      <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
+      <button type="submit" class="submit"> ENVIAR </button>
+    </div>
+  </form>
+</div>
