--- a/evaluator/src/app/components/evaluators/evaluators.component.html
+++ b/evaluator/src/app/components/evaluators/evaluators.component.html
@@ -1,7 +1,7 @@
 <div class="body">
   <div class="main">
     <div class="header">
-      <div class="img"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></div>
+      <div class="img"><img src="assets/img/logo-devs2blu.png"></div>
       <button class="btn-exit"> SAIR </button>
     </div>
     <div class="content">
@@ -9,9 +9,8 @@
       <div class="line"></div>
       <h1> BEM-VINDO! </h1>
       <div class="line"></div>
-      <p class="intro"> Está é a sua página de avaliador<span style="font-weight: 500;"> +DEVS2BLU HACK WEEK </span>
-      </p>
-      <p> Aqui você acompanha o estado atual das suas avaliações </p>
+      <p class="intro"> Está é a sua página de avaliador <span style="font-weight: 500;"> +DEVS HACK WEEK </span></p>
+      <p> Aqui você pode acompanhar o estado atual das suas avaliações </p>
       <!-- <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div> -->
       <div class="table">
         <h2> ABERTAS </h2>
@@ -30,7 +29,7 @@
               <td> Equipe A </td>
               <td> Stack A </td>
               <td class="btn-actions">
-                <button (click)="openDialog()"><i class="fa-solid fa-pen-to-square fa-lg"></i></button>
+                <button (click)="openDialog();"><i class="fa-solid fa-pen-to-square fa-lg"></i></button>
               </td>
             </tr>
           </tbody>
@@ -38,7 +37,5 @@
       </div>
     </div>
   </div>
-  <div class="footer">
-    <app-footer-credits></app-footer-credits>
-  </div>
+  <div class="footer"><app-footer-credits></app-footer-credits></div>
 </div>
