--- a/evaluator/src/app/components/login/login.component.html
+++ b/evaluator/src/app/components/login/login.component.html
@@ -7,20 +7,16 @@
       <div class="form-login">
         <label for="username"> USUÁRIO </label>
         <div class="input-user">
-          <div class="icon-container">
-            <i class="fas fa-user fa-lg"></i>
-          </div>
+          <div class="icon-container"><i class="fas fa-user fa-lg"></i></div>
           <input type="text" class="input-login" id="username" formControlName="username">
         </div>
       </div>
       <div class="form-login">
         <label for="password"> SENHA </label>
         <div class="input-password">
-          <div class="icon-container">
-            <i class="fa-solid fa-key fa-lg"></i>
-          </div>
+          <div class="icon-container"><i class="fa-solid fa-key fa-lg"></i></div>
           <input [type]="showPassword ? 'text' : 'password'" class="input-login" id="password" formControlName="password">
-          <span class="toggle-password" (click)="togglePassword();" [ngClass]="{ 'show-password': showPassword }">
+          <span class="toggle-password" (click)="togglePassword();" [ngClass]="{'show-password': showPassword}">
             <i class="fa" [ngClass]="showPassword ? 'fa-eye' : 'fa-eye-slash'"></i>
           </span>
         </div>
