fix: label filter fix: padding btn-generate-password

--- a/evaluator/src/app/components/admin/criterion/criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.html
@@ -4,13 +4,12 @@
     <div class="line"></div>
   </div>
   <div class="input-container">
-    <label for="filter"> FILTRAR </label>
     <div class="input-icons">
       <div class="search-input">
         <div class="icon">
           <i class="fas fa-search fa-lg" ></i>
         </div>
-        <input type="text" class="input-filter" id="filter" [(ngModel)]="filter">
+        <input type="text" class="input-filter" id="filter" [(ngModel)]="filter" placeholder="FILTRAR">
       </div>
       <button class="btn-cadastrar" (click)="openDialog();"> CADASTRAR </button>
     </div>
