--- a/evaluator/src/app/components/admin/presentation/presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.html
@@ -5,15 +5,14 @@
     <div class="line"></div>
   </div>
   <div class="input-container">
-    <label for="filter"> FILTRAR </label>
     <div class="input-icons">
       <div class="search-input">
         <div class="icon">
           <i class="fas fa-search fa-lg"></i>
         </div>
-        <input type="text" class="input-filter" id="filter" [(ngModel)]="filter">
+        <input type="text" class="input-filter" id="filter" [(ngModel)]="filter" placeholder="FILTRAR">
       </div>
-      <button class="btn-finish" (click)="openDialog();"> ENCERRAR APRESENTAÇÕES </button>
+      <button class="btn-finish" (click)="openDialog();"> ENCERRAR AVALIAÇÕES </button>
     </div>
   </div>
   <h2 class="title-table"> EM ESPERA </h2>
@@ -26,7 +25,6 @@
             <th> NOME DA EQUIPE </th>
             <th> STACK </th>
             <th> NOME DO PROJETO </th>
-            <th> ENCERRAR </th>
           </tr>
         </thead>
         <tbody>
@@ -35,7 +33,6 @@
             <td> {{ item.equipe }} </td>
             <td> {{ item.stack }} </td>
             <td> {{ item.nomeequipe }}</td>
-            <td><button><i class="fa-solid fa-circle-stop fa-lg"></i></button></td>
           </tr>
         </tbody>
       </table>
