--- a/evaluator/src/app/components/admin/team/team.component.scss
+++ b/evaluator/src/app/components/admin/team/team.component.scss
@@ -55,7 +55,7 @@ input:focus {
 }
 
 .input-container {
-  padding: 0 40px;
+  padding: 10px 40px;
 }
 
 .input-icons {
@@ -105,7 +105,7 @@ button {
   color: var(--white);
   font-family: var(--font);
   font-size: 0.9rem;
-  padding: 0 5px;
+  padding: 5px 10px;
   border-radius: 0;
 }
 .btn-generate-password:hover{
