--- a/evaluator/src/app/components/admin/challenge/challenge.component.html
+++ b/evaluator/src/app/components/admin/challenge/challenge.component.html
@@ -26,7 +26,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of data | filter: filterCols: filter">
-          <td> {{ item.id }} </td>
+          <td> <i class="fa-solid fa-award fa-lg"></i> </td>
           <td> {{ item.name }} </td>
           <td> {{ item.propositionCriteria.length }} </td>
           <td class="btn-actions">
