--- a/evaluator/src/app/components/admin/criterion/criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.html
@@ -26,7 +26,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of data | filter: filterCols: filter">
-          <td> {{ item.id }} </td>
+          <td> <i class="fa-solid fa-magnifying-glass-chart fa-lg"></i> </td>
           <td> {{ item.name }} </td>
           <td> {{ item.description }} </td>
           <td class="btn-actions">
