--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.html
@@ -27,7 +27,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of data | filter: filterCols: filter">
-          <td> {{ item.id }} </td>
+          <td> <i class="fa-solid fa-user-tie fa-lg"></i> </td>
           <td> {{ item.name }} </td>
           <td> {{ item.username }} </td>
           <td>
