--- a/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-form">
   <h2> Formulário de Avaliador </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value);">
     <div class="input-container">
       <label for="name"> NOME </label>
       <div class="input-group">
