fix: Fit "ranking.component.scss" on budget.

--- a/evaluator/src/app/components/evaluators/evaluators.component.html
+++ b/evaluator/src/app/components/evaluators/evaluators.component.html
@@ -1,9 +1,8 @@
 <div class="body">
   <div class="main">
-    <div class="header">
-      <div class="img"><img src="assets/img/logo-devs2blu.png"></div>
+    <app-header>
       <button class="btn-exit"> SAIR </button>
-    </div>
+    </app-header>
     <div class="content">
       <h1> AVALIADOR </h1>
       <div class="line"></div>
