fix: Returning current group and ortographic fixes

--- a/evaluator/src/app/components/evaluators/evaluators.component.html
+++ b/evaluator/src/app/components/evaluators/evaluators.component.html
@@ -8,7 +8,7 @@
       <div class="line"></div>
       <h1> BEM-VINDO! </h1>
       <div class="line"></div>
-      <p class="intro"> Está é a sua página de avaliador <span style="font-weight: 500;"> +DEVS HACK WEEK </span></p>
+      <p class="intro"> Esta é a sua página de avaliador <span style="font-weight: 500;"> +DEVS HACK WEEK </span></p>
       <p> Aqui você pode acompanhar o estado atual das suas avaliações </p>
       <!-- <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div> -->
       <div class="table">
