--- a/evaluator/src/app/components/group/group.component.html
+++ b/evaluator/src/app/components/group/group.component.html
@@ -6,7 +6,7 @@
     <div class="header-intro">
       <h1> EQUIPE </h1>
       <div class="line"></div>
-      <p class="intro"> Está é a sua página de equipe <span style="font-weight: 500;"> +DEVS HACK WEEK </span></p>
+      <p class="intro"> Esta é a sua página de equipe <span style="font-weight: 500;"> +DEVS HACK WEEK </span></p>
       <p> Aqui você pode cadastrar e acompanhar o estado atual do seu projeto </p>
     </div>
     <div class="content">
