fix: body min-height 100vh

--- a/evaluator/src/app/components/ranking/ranking.component.scss
+++ b/evaluator/src/app/components/ranking/ranking.component.scss
@@ -1,6 +1,10 @@
 @import url(src/styles.scss);
 
-
+.body{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 // -------- HEADER
 .button-login {
   font-family: var(--font);
