--- a/evaluator/src/app/components/ranking/ranking.component.html
+++ b/evaluator/src/app/components/ranking/ranking.component.html
@@ -1,28 +1,29 @@
 <div class="body">
-<div class="main">
-  <app-header>
-    <button class="button-login" [routerLink]="['/login']"><i class="fa-solid fa-arrow-right-to-bracket"></i> LOGIN </button>
-  </app-header>
+  <div class="main">
+    <app-header>
+      <button class="button-login" [routerLink]="['/login']"><i class="fa-solid fa-arrow-right-to-bracket"></i> LOGIN
+      </button>
+    </app-header>
 
-  <app-loading *ngIf="this.data.length == 0"></app-loading>
+    <app-loading *ngIf="this.data.length == 0"></app-loading>
 
-  <div class="ranking-container" *ngIf="this.data.length > 0">
-    <div class="podium" (click)="reveal();">
-      <!-- Primeiro lugar (Dourado) -->
-      <app-card cardTitle="1º Lugar" cardColor="gold" [revealed]="revealed1" [data]="data[0]"></app-card>
-      <!-- Segundo lugar (Prata) -->
-      <app-card cardTitle="2º Lugar" cardColor="silver" [revealed]="revealed2" [data]="data[1]"></app-card>
-      <!-- Terceiro lugar (Bronze) -->
-      <app-card cardTitle="3º Lugar" cardColor="bronze" [revealed]="revealed3" [data]="data[2]"></app-card>
-    </div>
-    <!-- TODOS GRUPOS -->
-    <div class="other-groups" *ngIf="revealed1">
-      <h1> RANKING COMPLETO </h1>
-      <app-position-line *ngFor="let item of data; let i = index" [index]="i" [data]="item"></app-position-line>
+    <div class="ranking-container" *ngIf="this.data.length > 0">
+      <div class="podium" (click)="reveal();">
+        <!-- Primeiro lugar (Dourado) -->
+        <app-card cardTitle="1º Lugar" cardColor="gold" [revealed]="revealed1" [data]="data[0]"></app-card>
+        <!-- Segundo lugar (Prata) -->
+        <app-card cardTitle="2º Lugar" cardColor="silver" [revealed]="revealed2" [data]="data[1]"></app-card>
+        <!-- Terceiro lugar (Bronze) -->
+        <app-card cardTitle="3º Lugar" cardColor="bronze" [revealed]="revealed3" [data]="data[2]"></app-card>
+      </div>
+      <!-- TODOS GRUPOS -->
+      <div class="other-groups" *ngIf="revealed1">
+        <h1> RANKING COMPLETO </h1>
+        <app-position-line *ngFor="let item of data; let i = index" [index]="i" [data]="item"></app-position-line>
+      </div>
     </div>
   </div>
-</div>
-<div class="footer">
-  <app-footer-credits></app-footer-credits>
-</div>
+  <div class="footer">
+    <app-footer-credits></app-footer-credits>
+  </div>
 </div>
