--- a/evaluator/src/app/components/group/group.component.html
+++ b/evaluator/src/app/components/group/group.component.html
@@ -1,9 +1,8 @@
 <div class="body">
   <div class="main">
-    <div class="header">
-      <div class="img"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></div>
+    <app-header>
       <button class="btn-exit" (click)="logout();"> SAIR </button>
-    </div>
+    </app-header>
     <div class="header-intro">
       <h1> EQUIPE </h1>
       <div class="line"></div>
